--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bootstrap.min.css"
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="font-awesome.css">
@@ -15,7 +15,7 @@
     <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>HAMMER</title>
+    <title >HAMMER</title>
 </head>
 
 <body style="background: url(bg-body.jpg);">
@@ -32,28 +32,34 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto nav-icon">
                     <li class="nav-item active">
-                        <a href="index" class="nav-link "><i class="fa fa-home"></i>Главная</a>
+                        <a href="index" class="nav-link "><i class="fa fa-home"></i><p th:text="#{label.main}"></p></a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
-                                class="fa fa-info"></i>Категории</a>
+                                class="fa fa-info"></i><p th:text="#{label.category}"></p></a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/antikiick">Антиквариат и искусство</a>
-                            <a class="dropdown-item" href="/vintag">Винтаж</a>
-                            <a class="dropdown-item" href="/collec">Коллекционное</a>
-                            <a class="dropdown-item" href="/sdelsruk">Сделанное своими руками</a>
-                            <a class="dropdown-item" href="/dragiukr">Драгоценности и украшения</a>
+                            <a class="dropdown-item" href="/antikiick"><p th:text="#{label.antiquesAndArt}"></p></a>
+                            <a class="dropdown-item" href="/vintag"><p th:text="#{label.vintage}"></p></a>
+                            <a class="dropdown-item" href="/collec"><p th:text="#{label.collection}"></p></a>
+                            <a class="dropdown-item" href="/sdelsruk"><p th:text="#{label.handmade}"></p></a>
+                            <a class="dropdown-item" href="/dragiukr" ><p th:text="#{label.drag}"></p></a>
                         </div>
                     </li>
                     <li class="nav-item active">
-                        <a href="login" class="nav-link "><i class="fa fa-home"></i>Вход/Регистрация</a>
+                        <a href="login" class="nav-link "><i class="fa fa-home"></i><p th:text="#{label.signin}"></p></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a th:href="@{?locale=ru}" class="nav-link "><i class="fa fa-home"></i>ru</a>
+                    </li>
+                    <li>
+                        <a th:href="@{?locale=eng}" class="nav-link "><i class="fa fa-home"></i>eng</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <input style="margin-bottom:auto " type="text" class="form-control mr-sm 2" placeholder="Поиск" aria-label="Search">
+                    <input style="margin-bottom:auto " type="text" class="form-control mr-sm 2" th:placeholder="#{label.find}" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0"
-                        style="margin: 0 0 0 10px; /*padding-left: 30px; padding-right: 30px*/">Поиск</button>
+                        style="margin: 0 0 0 10px; /*padding-left: 30px; padding-right: 30px*/" th:text="#{label.find}"></button>
                 </form>
             </div>
         </div>
@@ -64,13 +70,13 @@
 
     <form action="/login" method="post">
         <h1>Вход</h1>
-        <input type="text" name="username" class="input1" placeholder="введите почту"/>
-        <input type="password" name="password" class="input1" placeholder="Введите пароль"/>
-        <button type="submit" class="button1" value="Sing In">Войти</button>
-        <p><a href="registr" type="submit" class="vhodbtn">Регистрация</a></p>
+        <input type="text" name="username" class="input1" th:placeholder="#{label.mail}"/>
+        <input type="password" name="password" class="input1" th:placeholder="#{label.password}"/>
+        <input type="submit" name="button" class="input1" th:value="#{label.submit}"/>
+        <a href="registr" type="submit" class="vhodbtn" ><p th:text="#{label.signUp}"></p></a>
     </form>
     <div >
-        <a href="zabpar"  class="vhodbtn">Забыли парoль? </a>
+        <a href="zabpar"  class="vhodbtn"><p th:text="#{label.ForgotYourPassword}"></p></a>
     </div>
 
 
