--- a/src/main/resources/templates/lk.html
+++ b/src/main/resources/templates/lk.html
@@ -104,8 +104,12 @@
           <a class="personalhref" data-toggle="collapse" href="#multiCollapseExample3" role="button"
             aria-expanded="false" aria-controls="multiCollapseExample1">"Мои ставки"</a>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-4 text-center justify-content-center">
+         <div class="col-lg-3 col-md-4 col-sm-4 text-center justify-content-center">
           <a class="personalhref" data-toggle="collapse" href="#multiCollapseExample4" role="button"
+            aria-expanded="false" aria-controls="multiCollapseExample1">"Мои аукционы"</a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-4 text-center justify-content-center">
+          <a class="personalhref" data-toggle="collapse" href="#multiCollapseExample5" role="button"
             aria-expanded="false" aria-controls="multiCollapseExample1">Избранное</a>
         </div>
       </div>
@@ -117,20 +121,7 @@
       <div class="collapse multi-collapse" id="multiCollapseExample1">
         <div class="card card-body" style="border: 1px solid white;">
           <p style="margin-bottom: 35px;">Мои лоты</p>
-<<<<<<< HEAD
 			<div class = "table" id="test_database"></div>        
-=======
-          <div th:each="el : ${lots}">
-   	 <h3>
-        <p th:text="${el.getId()}"></p>
-        <p th:text="${el.getStartCost()}"></p>
-        <p th:text="${el.getProduct()}"></p>
-        <p th:text="${el.getDescription()}"></p>
-       <p th:text="${el.getPhoto}"></p>
-       <img th:src="'/Img/'+${el.getPhoto()}+.jpg">
-    </h3>
-		</div>
->>>>>>> branch 'Test' of https://github.com/NikitaDr-ON/Auction.git
         </div>
       </div>
     </div>
@@ -169,9 +160,6 @@
                 <option value="4">Сделанное своими руками</option>
                 <option value="5">Драгоценности и украшения</option>
               </select>
-              <div style="text-align: left;">
-                <label for="dateStart">Время начала аукциона:</label><input type="date" id="dateStart">
-                <label for="dateEnd">Время завершения аукциона:</label><input type="date" id="dateEnd">
                 <div class="justify-content-center text-center">
                   <button class="btn btn-primary" onclick="addLot();">Добавить</button>
                 </div>
@@ -183,12 +171,22 @@
 	</div>
 </form>
    
-   
-      <div class="container-fluid" style="margin: 30px auto 50px auto;">
+         <div class="container-fluid" style="margin: 30px auto 50px auto;">
         <div class="container text-center justify-content-center" style="border-radius: 15px; background-color: white;">
           <div class="collapse multi-collapse" id="multiCollapseExample3">
             <div class="card card-body" style="border: 1px solid white;">
               <p style="margin-bottom: 35px;">Мои ставки</p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid" style="margin: 30px auto 50px auto;">
+        <div class="container text-center justify-content-center" style="border-radius: 15px; background-color: white;">
+          <div class="collapse multi-collapse" id="multiCollapseExample4">
+            <div class="card card-body" style="border: 1px solid white;">
+              <p style="margin-bottom: 35px;">Мои аукционы</p>
+              <div class = "table" id="list_auction"></div>
             </div>
           </div>
         </div>
@@ -197,7 +195,7 @@
 
       <div class="container-fluid" style="margin: 30px auto 50px auto;">
         <div class="container text-center justify-content-center" style="border-radius: 15px; background-color: white;">
-          <div class="collapse multi-collapse" id="multiCollapseExample4">
+          <div class="collapse multi-collapse" id="multiCollapseExample5">
             <div class="card card-body" style="border: 1px solid white;">
               <p style="margin-bottom: 35px;">Избранное</p>
             </div>
